housecat text tweaks/additions readability fixes

--- a/apps/profiles-explorer/styles/housecat/About.module.css
+++ b/apps/profiles-explorer/styles/housecat/About.module.css
@@ -5,12 +5,21 @@
 
 .content {
   @apply overflow-auto;
-  @apply leading-relaxed;
   @apply p-8 pb-8;
+  @apply max-w-3xl;
+}
+
+.content a,
+.content p,
+.content ul {
+  @apply font-serif;
+  @apply text-xl text-zinc-800;
+  @apply leading-relaxed;
 }
 
 .content a {
-  @apply font-medium text-blue-600 underline;
+  @apply font-medium text-blue-800 underline;
+  @apply hover:text-blue-400;
 }
 
 .content h2 {
@@ -18,7 +27,7 @@
 }
 
 .content h3 {
-  @apply pt-6 mb-2;
+  @apply pt-8 mb-4;
   @apply font-semibold text-3xl;
   @apply border-b border-black;
 }
@@ -28,8 +37,9 @@
   @apply font-semibold;
 }
 
-.content p {
-  @apply mb-2;
+.content p,
+.content ul {
+  @apply mb-4;
 }
 
 .content ul {
@@ -64,4 +74,5 @@
   @apply text-lg;
   @apply my-2;
   @apply font-medium underline;
+  @apply hover:text-amber-500;
 }
