--- a/apps/profiles-explorer/styles/housecat/Map.module.css
+++ b/apps/profiles-explorer/styles/housecat/Map.module.css
@@ -24,6 +24,23 @@
   @apply p-5;
 }
 
+.infoSection a,
+.infoSection p,
+.infoSection ul {
+  @apply text-zinc-800;
+  @apply leading-relaxed;
+}
+
+.infoSection a {
+  @apply font-medium text-blue-800 underline;
+  @apply hover:text-blue-400;
+}
+
+.infoSection p,
+.infoSection ul {
+  @apply mb-4;
+}
+
 .infoTitle {
   @apply font-medium;
   @apply text-5xl;
@@ -34,5 +51,9 @@
 }
 
 .filterTitle {
+  @apply text-2xl font-medium;
+}
+
+.cta {
   @apply text-2xl font-medium;
 }
